--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "review",
   "version": "0.1.0",
+  "proxy": "http://localhost:3005",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
+    "body-parser": "^1.17.2",
+    "cors": "^2.8.4",
+    "express": "^4.15.4",
+    "massive": "^4.0.0",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "react-scripts": "1.0.13"
